[gd_scene load_steps=5 format=3 uid="uid://bf1ecqbuvwd13"]

[ext_resource type="Script" path="res://Entities/entities_scripts/bullet_shotgun.gd" id="1_00ndy"]
[ext_resource type="Texture2D" uid="uid://cpoechfweyp11" path="res://Sprites/bullet.png" id="1_x88q3"]
[ext_resource type="AudioStream" uid="uid://o0wtnet6lm8j" path="res://SoundEffects/shotgun_impact.ogg" id="3_o6u38"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3w2es"]
radius = 3.0

[node name="bullet_shotgun" type="Area2D" groups=["Bullet"]]
collision_layer = 2
collision_mask = 40
script = ExtResource("1_00ndy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_x88q3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3w2es")

[node name="visible" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-5.96046e-08, 0)
scale = Vector2(0.3, 0.3)

[node name="AudioStreamImpactShotgun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o6u38")
volume_db = -10.0
panning_strength = 0.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="visible" to="." method="_on_visible_screen_exited"]
